icondir = $(datadir)/icons/EndlessOS/64x64/apps
icon_DATA = \
	123tux.png	\
	alerta-rio.png	\
	angrybirds.png	\
	armagetron-adv.png	\
	audacity.png	\
	bandnews.png	\
	billardgl.png	\
	blockout2.png	\
	bol.png		\
	botafogo.png	\
	brasil-escola.png	\
	calculator.png	\
	catho.png	\
	chromium-bsu.png	\
	cifraclub.png	\
	cinema.png	\
	clickjogos.png	\
	climatempo.png	\
	cnn.png		\
	codeacademy.png	\
	curriculo.png	\
	curriculum.png	\
	delegacias.png	\
	dictionary.png	\
	disque-denuncia.png	\
	email.png	\
	emprego-certo.png	\
	empregos-rj.png	\
	escola-abril.png	\
	extra.png	\
	facebook.png	\
	file-manager.png	\
	fisicando.png	\
	flamengo.png	\
	fluminense.png	\
	fofoca-tv.png	\
	freecell.png	\
	g1.png		\
	gazeta-esportiva.png	\
	gbrainy.png	\
	gcompris.png	\
	generic-app.png	\
	generic-link.png	\
	geniusmath.png	\
	gimp.png	\
	globo-dot-com.png	\
	globoesporte-dot-com.png	\
	globonews.png	\
	gmail.png	\
	gnt.png		\
	goldendict.png	\
	google.png	\
	googletranslate.png	\
	grito-da-nacao.png	\
	grooveshark.png	\
	guia-da-semana.png	\
	hotmail.png	\
	imdb.png	\
	inea.png	\
	infojobs.png	\
	ingresso-com.png	\
	kboing.png	\
	khanacademy.png	\
	kobodeluxe.png	\
	lancenet.png	\
	lbreakout.png	\
	market.png	\
	meiahora.png	\
	mercadolivre.png	\
	ministerio-esporte.png	\
	museu-do-futebol.png	\
	music.png	\
	ninguemcala.png	\
	nyt.png		\
	odia.png	\
	office_presentation.png	\
	office_spreadsheet.png	\
	office_text.png	\
	oglobo.png	\
	olimpiadasrio2016.png	\
	openarena.png	\
	orkut.png	\
	photo.png	\
	pingus.png	\
	plano-saude-net.png	\
	plano-saude-online.png	\
	portalbrasil.png	\
	portal-saude.png	\
	poupa-tempo.png	\
	qbittorrent.png	\
	r7-noticias.png	\
	r7.png		\
	receitas-globo.png	\
	recipes.png	\
	riocontradengue.png	\
	rioshow.png	\
	rio-vagas.png	\
	rjtv.png	\
	saude-abril.png	\
	saude-terra.png	\
	senac-rj.png	\
	senado-federal.png	\
	settings.png	\
	shotwell.png	\
	site-da-baixada.png	\
	skype.png	\
	solitaire.png	\
	som13.png	\
	sq-seguros.png	\
	stellarium.png	\
	sudoku.png	\
	supertuxkart.png	\
	supertux.png	\
	ted.png		\
	teelandia.png	\
	telefones-uteis.png	\
	terra.png	\
	theeconomist.png	\
	turismo-radical.png	\
	tuxtyping.png	\
	twitter.png	\
	typing.png	\
	unodc.png	\
	upa24h.png	\
	vasco-da-gama.png	\
	vestibular.png	\
	video.png	\
	vivafavela.png	\
	weather.png	\
	wikipedia.png	\
	worldwondersproject.png	\
	wsj.png		\
	yahoo.png	\
	youtube-app.png	\
	youtube.png	\
	zap.png
