folderdir = $(datadir)/icons/EndlessOS/64x64/folders
folder_DATA = \
	baby.png	\
	balloon.png	\
	basketball.png	\
	bell.png	\
	bike.png	\
	business.png	\
	christmas-tree.png	\
	christ-redeemer.png	\
	church.png	\
	cloud.png	\
	college.png	\
	curiosity.png	\
	eiffel-tower.png	\
	flag.png	\
	flower.png	\
	games.png	\
	glasses.png	\
	grape.png	\
	graph.png	\
	guitar.png	\
	heart.png	\
	helicopter.png	\
	ice-cream.png	\
	juice.png	\
	leaf.png	\
	media.png	\
	moon.png	\
	news.png	\
	pacman.png	\
	paper-plane.png	\
	paw-print.png	\
	pizza.png	\
	rainbow.png	\
	recycle.png	\
	rocket.png	\
	saturn.png	\
	science.png	\
	shield.png	\
	social.png	\
	star.png	\
	suitcase.png	\
	sun.png		\
	tools.png	\
	trophy.png	\
	video.png	\
	work.png
