minidir = $(datadir)/icons/EndlessOS/21x21/apps
mini_DATA = \
	123tux.png	\
	angrybirds.png	\
	armagetron-adv.png	\
	audacity.png	\
	billardgl.png	\
	blockout2.png	\
	bol.png		\
	calculator.png	\
	chromium-bsu.png	\
	cnn.png		\
	codeacademy.png	\
	dictionary.png	\
	email.png	\
	facebook.png	\
	file-manager.png	\
	fisicando.png	\
	freecell.png	\
	gbrainy.png	\
	gcompris.png	\
	generic-app.png	\
	generic-link.png	\
	geniusmath.png	\
	gimp.png	\
	globo-dot-com.png	\
	globoesporte-dot-com.png	\
	gmail.png	\
	goldendict.png	\
	google.png	\
	hotmail.png	\
	khanacademy.png	\
	kobodeluxe.png	\
	lbreakout.png	\
	market.png	\
	music.png	\
	nyt.png		\
	office_presentation.png	\
	office_spreadsheet.png	\
	office_text.png	\
	openarena.png	\
	orkut.png	\
	photo.png	\
	pingus.png	\
	qbittorrent.png	\
	recipes.png	\
	settings.png	\
	shotwell.png	\
	skype.png	\
	solitaire.png	\
	stellarium.png	\
	sudoku.png	\
	supertuxkart.png	\
	supertux.png	\
	ted.png		\
	teelandia.png	\
	terra.png	\
	theeconomist.png	\
	tuxtyping.png	\
	twitter.png	\
	typing.png	\
	video.png	\
	weather.png	\
	wikipedia.png	\
	worldwondersproject.png	\
	wsj.png		\
	youtube-app.png	\
	youtube.png
