themedir = $(datadir)/themes/EndlessOS/metacity-1
theme_DATA = \
	metacity-theme-1.xml \
	close_focused_normal.png \
	close_focused_prelight.png \
	close_focused_pressed.png \
	close.png \
	close_unfocused_over.png \
	close_unfocused.png \
	close_unfocused_prelight.png \
	close_unfocused_pressed.png \
	maximize_focused_normal.png \
	maximize_focused_prelight.png \
	maximize_focused_pressed.png \
	maximize.png \
	maximize_unfocused_over.png \
	maximize_unfocused.png \
	maximize_unfocused_prelight.png \
	maximize_unfocused_pressed.png \
	menu.png \
	menu_prelight.png \
	minimize_focused_normal.png \
	minimize_focused_prelight.png \
	minimize_focused_pressed.png \
	minimize.png \
	minimize_unfocused_over.png \
	minimize_unfocused.png \
	minimize_unfocused_prelight.png \
	minimize_unfocused_pressed.png \
	trough_left.png \
	trough_middle.png \
	trough_right.png \
	trough_unfocused_left.png \
	trough_unfocused_middle.png \
	trough_unfocused_right.png \
	unmaximize_focused_normal.png \
	unmaximize_focused_prelight.png \
	unmaximize_focused_pressed.png \
	unmaximize.png \
	unmaximize_unfocused_over.png \
	unmaximize_unfocused.png \
	unmaximize_unfocused_prelight.png \
	unmaximize_unfocused_pressed.png \
	$(NULL)

EXTRA_DIST = $(theme_DATA)
